cleaned some usedless files

--- a/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
+++ b/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
@@ -1,2 +1,11 @@
 .card {
+  background-color: hsl(244, 38%, 16%);
+  height: 60vh;
+  width: 75%;
+  margin: 0 auto;
+  vertical-align: middle
+}
+
+h1 {
+  color: white;
 }
