--- a/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
+++ b/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
@@ -1,11 +1,73 @@
+
 .card {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+  height: 445px;
+  width: 1080px;
+  margin: 0;
   background-color: hsl(244, 38%, 16%);
-  height: 60vh;
-  width: 75%;
-  margin: 0 auto;
-  vertical-align: middle
+  .image {
+    flex-grow: 0;
+    background-image: url(../../assets/image-header-desktop.jpg);
+    box-shadow: 0 0 0 250px rgba(180,50,255, 0.5) inset;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    padding: 0;
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+    height: 100%;
+    width: 100%;
+    //padding: 0 80px;
+    .paragraphs {
+      flex-shrink: 1;
+      padding: 0 80px;
+    }
+    .rows {
+      display: flex;
+      flex-direction: column;
+      .first {
+        margin-top: 50px;
+        font-size: 20px;
+        font-weight: bold;
+        color: hsla(0, 0%, 100%, 0.6);
+      }
+      .second {
+        margin-top: 0px;
+        margin-bottom: 15px;
+      }
+      ul {
+        margin: 0 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        li {
+          list-style:none;
+          margin: 0;
+        }
+      }
+
+    }
+  }
 }
 
-h1 {
-  color: white;
+span {
+  color: hsl(277, 64%, 61%);
 }
+
+p {
+  color: hsla(0, 0%, 100%, 0.75);
+  margin-top: 50px;
+}
+
+
