--- a/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
+++ b/Stats-preview-card-component/stats-preview-card-component/src/components/card/card.styles.scss
@@ -28,14 +28,21 @@
     color: white;
     height: 100%;
     width: 100%;
+
+    .title {
+      padding-top: 40px;
+      text-align: left;
+    }
     //padding: 0 80px;
     .paragraphs {
       flex-shrink: 1;
       padding: 0 80px;
     }
     .rows {
-      display: flex;
-      flex-direction: column;
+      display: grid;
+      grid-template-rows: repeat(3, 50px) / repeat(3, 50px);
+              //grid-template-columns: repeat(3, 50px);
+
       .first {
         margin-top: 50px;
         font-size: 20px;
@@ -43,7 +50,7 @@
 
       }
       .second {
-        margin-top: 0px;
+        margin-top: 0;
         margin-bottom: 15px;
         color: hsla(0, 0%, 100%, 0.6);
       }
@@ -68,7 +75,8 @@ span {
 
 p {
   color: hsla(0, 0%, 100%, 0.75);
-  margin-top: 50px;
+  text-align: left;
+  //margin-top: 50px;
 }
 
 
